# cadmus

./: Cargo.toml  INTEGRATION_STRATEGY.md  pacman.html
evals/: README.md  REPORT.md  run_evals.sh
evals/results/: 2026-03-06-glm4.7flash-post-fix.md  2026-03-06-glm4.7flash.md
src/: agent.rs  lib.rs  main.rs  tool_executor.rs  tools.rs  ui.rs
src/nl/: intent_compiler.rs  mod.rs
tests/: agent_tools_tests.rs  nl_earley_tests.rs
