[package]
name = "cadmus"
version = "0.1.0"
edition = "2021"

[features]
default = []
llm = ["dep:llama-cpp-2", "dep:encoding_rs"]
agent = ["dep:ureq"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
rustyline = "15"
llama-cpp-2 = { version = "0.1", features = ["metal"], optional = true }
encoding_rs = { version = "0.8", optional = true }
ureq = { version = "2", features = ["json"], optional = true }

